--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -123,7 +123,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -156,7 +156,7 @@
                     }
 
                     <div class="header__actions row">
-                        <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="/blog/en">@Model.Value("products")</a>
+                                    <a href="/blog/en">@Model.Value("jobs")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
@@ -270,12 +270,6 @@
                                         <a href="https://wa.me/97235603536" target="_blank" rel="noopener">
                                             <img src="/assets/images/icons/whatsapp-icon.svg" alt="WhatsApp">
                                             @Model.Value("contactUs")
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="mailto:info@mekashron.com">
-                                            <img src="/assets/images/icons/mail.svg" alt="mail">
-                                            info@mekashron.com
                                         </a>
                                     </li>
                                 </ul>
