--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -115,7 +115,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -139,7 +139,7 @@
                     </a>
 
                     <div class="header__actions row">
-                        <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 </p>
                 <div class="buttons">
                     <a href="/blog/en/page/solutions" class="button">@Model.Value("exploreSolutions")</a>
-                    <a href="/blog/en/page/industries" class="button button--dark">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/contactus" class="button button--dark">@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </section>
@@ -269,7 +269,7 @@
                             <h3>Mekashron CRM</h3>
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
-                                <a href="/blog/en/page/solutions" class="button button--accent">@Model.Value("downloadButton")</a>
+                                <a href="/download/callcenterV7" class="button button--accent">@Model.Value("downloadButton")</a>
                                 @*<a href="/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
                                 <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
 
@@ -320,7 +320,7 @@
             <div class="container">
                 <h2 style="text-align: center;">@Model.Value("readyToBuild")</h2>
                 <p style="text-align: center;">@Model.Value("tellUs")</p>
-                <a href="/blog/en/page/industries" class="button">@Model.Value("getInTouch")</a>
+                <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
             </div>
         </section>
     </main>
@@ -342,7 +342,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="/blog/en">@Model.Value("products")</a>
+                                    <a href="/blog/en">@Model.Value("jobs")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
@@ -366,12 +366,6 @@
                                         <a href="https://wa.me/97235603536" target="_blank" rel="noopener">
                                             <img src="/assets/images/icons/whatsapp-icon.svg" alt="WhatsApp">
                                             @Model.Value("contactUs")
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="mailto:info@mekashron.com">
-                                            <img src="/assets/images/icons/mail.svg" alt="mail">
-                                            info@mekashron.com
                                         </a>
                                     </li>
                                 </ul>
