--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -317,7 +317,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="/blog/en">@Model.Value("jobs")</a>
+                                    <a href="/blog/en/page/jobs">@Model.Value("jobs")</a>
                                 </li>
                                 <li class="menu-item">
                                     @if (currentLangCode == "en")
