--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -342,7 +342,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__nav--list">
                                 <li class="menu-item">
-                                    <a href="/blog/en">@Model.Value("jobs")</a>
+                                    <a href="/blog/en/page/jobs">@Model.Value("jobs")</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
