--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -79,9 +79,6 @@
 
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
-                        <li class="menu-item">
-                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
-                        </li>
                         <li class="menu-item menu-item-has-children">
                             <a>@Model.Value("products")</a>
                             <ul class="sub-menu">
@@ -101,6 +98,12 @@
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/prices">@Model.Value("prices")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/industries">@Model.Value("industries")</a>
@@ -147,9 +150,6 @@
 
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
-                <li class="menu-item">
-                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
-                </li>
                 <li class="menu-item menu-item-has-children">
                     <a href="#">@Model.Value("products")</a>
                     <ul class="sub-menu">
@@ -169,6 +169,12 @@
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                         </li>
                     </ul>
+                </li>
+                <li class="menu-item">
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/blog/en/page/prices">@Model.Value("prices")</a>
                 </li>
                 <li class="menu-item">
                     <a href="/blog/en/page/industries">@Model.Value("industries")</a>
