--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -87,9 +87,6 @@
                 }
                 <nav class="header__navigation navigation">
                     <ul class="navigation__list">
-                        <li class="menu-item">
-                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
-                        </li>
                         <li class="menu-item menu-item-has-children">
                             <a href="#">@Model.Value("products")</a>
                             <ul class="sub-menu">
@@ -109,6 +106,12 @@
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="/blog/en/page/prices">@Model.Value("prices")</a>
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/industries">@Model.Value("industries")</a>
@@ -164,9 +167,6 @@
 
         <nav class="nav" role="navigation" aria-label="mobile navigation">
             <ul class="navigation__list">
-                <li class="menu-item">
-                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
-                </li>
                 <li class="menu-item menu-item-has-children">
                     <a href="#">@Model.Value("products")</a>
                     <ul class="sub-menu">
@@ -186,6 +186,12 @@
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
                         </li>
                     </ul>
+                </li>
+                <li class="menu-item">
+                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
+                </li>
+                <li class="menu-item">
+                    <a href="/blog/en/page/prices">@Model.Value("prices")</a>
                 </li>
                 <li class="menu-item">
                     <a href="blog.html">@Model.Value("industries")</a>
