--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -34,8 +34,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <title>Mekashron</title>
+    <meta name="description" content="Custom AI software, CRM systems, SaaS platforms, and enterprise solutions. Mekashron brings 20+ years of development experience to scalable, secure, and reliable digital products">
+    <title>@Model.Value("titleText")</title>
     <link rel="icon" type="image/png" href="/assets/images/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
