--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -22,12 +22,20 @@
         currentLangName = "Русский";
         currentLangFlag = "/assets/images/icons/country/Russia.svg";
     }
+    else if (path.StartsWith("/he/") || path.Equals("/he"))
+    {
+        currentLangCode = "he";
+        currentLangName = "ע\u05b4בר\u05b4ית";
+        currentLangFlag = "/assets/images/icons/country/Israel.svg";
+    }
+    var hebrew = "ע\u05b4בר\u05b4ית";
 }
 
 
 
 <!DOCTYPE html>
-<html lang="@currentLangCode">
+<html lang="@currentLangCode" dir="@(currentLangCode == "he" ? "rtl" : "ltr")">
+
 <head>
     
     <meta charset="UTF-8">
@@ -45,7 +53,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <style>
         .sub-menu {
@@ -347,6 +355,12 @@
                                                     <span>English</span>
                                                 </a>
                                             </li>
+                                            <li class="@(currentLangCode == "he" ? "is-active" : "")">
+                                                <a data-lang-code="he">
+                                                    <img src="/assets/images/icons/country/Israel.svg" alt="Hebrew" width="16" height="11" />
+                                                    <span>@hebrew</span>
+                                                </a>
+                                            </li>
                                             <li class="@(currentLangCode == "ru" ? "is-active" : "")">
                                                 <a data-lang-code="ru">
                                                     <img src="/assets/images/icons/country/Russia.svg" alt="Russia" width="16" height="11" />
@@ -379,7 +393,7 @@
 <script src="/assets/js/jquery-3.7.1.min.js"></script>
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
-<script src="/assets/js/_scripts4.js"></script>
+<script src="/assets/js/_scripts.js"></script>
 <script>
     (function () {
         'use strict';
