--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -393,7 +393,7 @@
 <script src="/assets/js/jquery-3.7.1.min.js"></script>
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
-<script src="/assets/js/_scripts.js"></script>
+<script src="/assets/js/scripts171225.js"></script>
 <script>
     (function () {
         'use strict';
