--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -431,6 +431,6 @@
 <script src="/assets/js/jquery-3.7.1.min.js"></script>
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
-<script src="/assets/js/_scripts.js"></script>
+<script src="/assets/js/scripts171225.js"></script>
 </body>
 </html>
