--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -53,7 +53,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/_style.css">
+    <link rel="stylesheet" href="/assets/css/style171225.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <style>
         .sub-menu {
@@ -289,18 +289,9 @@
         <div class="container">
             <div class="footer__inner">
                 <div class="column">
-                    @if (currentLangCode == "en")
-                    {
-                        <a href="/" class="logo">
-                            Mekashron
-                        </a>
-                    }
-                    else
-                    {
-                        <a href="/@currentLangCode" class="logo">
-                            Mekashron
-                        </a>
-                    }
+                    <a href="/" class="logo">
+                        Mekashron
+                    </a>
                     <p>
                         @Html.Raw(Model.Value("footerText"))
                     </p>
@@ -314,8 +305,8 @@
                                     <a href="/blog/en/page/jobs">@Model.Value("jobs")</a>
                                 </li>
                                 <li class="menu-item">
-                                        <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
-                                    </li>
+                                    <a href="/blog/en/page/solutions">@Model.Value("solutions")</a>
+                                </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/about-us">@Model.Value("about")</a>
                                 </li>
@@ -328,7 +319,8 @@
                             </ul>
                         </nav>
 
-                        <div class="column">
+                        <!-- Группируем WhatsApp и переключатель языка -->
+                        <div class="footer__contact-language">
                             <nav class="footer__links">
                                 <ul class="footer__links--list">
                                     <li>
@@ -377,7 +369,6 @@
                                     </li>
                                 </ul>
                             </button>
-
                         </div>
                     </div>
                 </div>
