--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -52,7 +52,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/_style.css">
+    <link rel="stylesheet" href="/assets/css/style171225.css">
     <style>
         .sub-menu {
             text-align: left;
@@ -366,7 +366,8 @@
                             </ul>
                         </nav>
 
-                        <div class="column">
+                        <!-- Группируем WhatsApp и переключатель языка -->
+                        <div class="footer__contact-language">
                             <nav class="footer__links">
                                 <ul class="footer__links--list">
                                     <li>
@@ -415,7 +416,6 @@
                                     </li>
                                 </ul>
                             </button>
-
                         </div>
                     </div>
                 </div>
