--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -275,7 +275,7 @@
                                 </ul>
                             </nav>
 
-                            <button class="language" id="language_btn" type="button">
+                            <button class="language" id="language_btn" type="button" style="max-width: 170px; ">
                                 <ul id="language-menu" class="language__list">
                                     <li id="menu-item-113">
                                         <a style="position: relative; width: 100%; padding: 0 !important;">
