--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -53,7 +53,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/style181225.css">
+    <link rel="stylesheet" href="/assets/css/style181225v2.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <style>
         .sub-menu {
@@ -332,7 +332,7 @@
                                 </ul>
                             </nav>
 
-                            <button class="language" id="language_btn" type="button" style="max-width: 170px; ">
+                            <button class="language" id="language_btn" type="button">
                                 <ul id="language-menu" class="language__list">
                                     <li id="menu-item-113">
                                         <a style="position: relative; width: 100%; padding: 0 !important;">
