--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -52,7 +52,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/style181225v2.css">
+    <link rel="stylesheet" href="/assets/css/style.css?v=191225">
     <style>
         .sub-menu {
             text-align: left;
