--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -53,7 +53,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="/assets/css/style181225v2.css">
+    <link rel="stylesheet" href="/assets/css/style.css?v=191225">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <style>
         .sub-menu {
