--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -107,10 +107,20 @@
                                     <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                                 </li>
                                 <li class="menu-item">
+                                    @if(currentLangCode == "he"){
+                                    <a href="https://www.zmenu.net/he/POS-for-a-retailers">@Model.Value("posretailers")</a>
+                                    }
+                                    else{
                                     <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
+                                    }
                                 </li>
                                 <li class="menu-item">
+                                    @if(currentLangCode == "he"){
+                                    <a href="https://www.zmenu.net/he/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
+                                    }
+                                    else{
                                     <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
+                                    }
                                 </li>
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
@@ -184,10 +194,20 @@
                             <a href="/blog/en/page/Call-Center-CRM">@Model.Value("crmcall")</a>
                         </li>
                         <li class="menu-item">
+                            @if(currentLangCode == "he"){
+                            <a href="https://www.zmenu.net/he/POS-for-a-retailers">@Model.Value("posretailers")</a>
+                            }
+                            else{
                             <a href="https://www.zmenu.net/POS-for-a-retailers">@Model.Value("posretailers")</a>
+                            }
                         </li>
                         <li class="menu-item">
+                            @if(currentLangCode == "he"){
+                            <a href="https://www.zmenu.net/he/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
+                            }
+                            else{
                             <a href="https://www.zmenu.net/POS-for-a-restaurant">@Model.Value("posrestaurant")</a>
+                            }
                         </li>
                         <li class="menu-item">
                             <a href="/blog/en/page/Cheque-printing-software">@Model.Value("cheque")</a>
