--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -292,10 +292,11 @@
                         <input type="email"
                                id="email"
                                name="email"
-                               ng-maxlength="20"
-                               maxlength="20"
                                ng-model="vm.form.email"
                                ng-pattern="vm.emailPattern"
+                               ng-maxlength="255"
+                               maxlength="255"
+                               ng-change="vm.trimLocalPart()"
                                required>
                     </div>
 
@@ -423,6 +424,26 @@
                 var vm = this;
 
                 vm.form = {};
+                vm.form = { email: '' }; // Инициализация модели
+
+// Функция для обрезки локальной части email
+                vm.trimLocalPart = function() {
+                    if (!vm.form.email) return;
+
+                    const email = vm.form.email;
+                    const atIndex = email.indexOf('\u0040');
+
+                    if (atIndex === -1) {
+                        if (email.length > 64) {
+                            vm.form.email = email.substring(0, 64);
+                        }
+                    } else {
+                        const localPart = email.substring(0, atIndex);
+                        if (localPart.length > 64) {
+                            vm.form.email = localPart.substring(0, 64) + email.substring(atIndex);
+                        }
+                    }
+                };
                 vm.emailPattern = /^[^\s@@]+@@[^\s@@]+\.[^\s@@]{2,}$/;
                 vm.onlyNumbers = function($event) {
                     var keyCode = $event.which || $event.keyCode;
@@ -479,7 +500,9 @@
                         });
                 };
             }]);
+        
     })();
+
 </script>
 </body>
 </html>
