--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -44,7 +44,7 @@
     <meta name="description" content="Custom AI software, CRM systems, SaaS platforms, and enterprise solutions. Mekashron brings 20+ years of development experience to scalable, secure, and reliable digital products">
     <title>@Model.Value("titleText")</title>
     <link rel="icon" type="image/png" href="/assets/images/favicon.png">
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -67,6 +67,10 @@
             display: block;
             padding-left: 10px;
             text-align: left;
+        }
+        body:lang(he) {
+            font-family: "Noto Sans Hebrew", sans-serif;
+            letter-spacing: 0.8px;
         }
     </style>
 </head>
