--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -45,6 +45,7 @@
 
     <title>@Model.Value("thank")</title>
     <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,6 +70,10 @@
             display: block;
             padding-left: 10px;
             text-align: left;
+        }
+        body:lang(he) {
+            font-family: "Noto Sans Hebrew", sans-serif;
+            letter-spacing: 0.8px;
         }
     </style>
 </head>
