--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -96,8 +96,15 @@
                 else
                 {
                     <a href="/@currentLangCode" class="logo">
-                        Mekashron
-                    </a>
+                        @if (currentLangCode == "he")
+                        {
+                        @:<text>מקשרון</text>
+                        }
+                        else
+                        {
+                        @:<text>Mekashron</text>
+                        }
+                        </a>
                 }
 
                 <nav class="header__navigation navigation">
@@ -176,8 +183,15 @@
                     else
                     {
                         <a href="/@currentLangCode" class="logo">
-                            Mekashron
-                        </a>
+                            @if (currentLangCode == "he")
+                            {
+                            @:<text>מקשרון</text>
+                            }
+                            else
+                            {
+                            @:<text>Mekashron</text>
+                            }
+                            </a>
                     }
 
                     <div class="header__actions row">
@@ -316,8 +330,15 @@
             <div class="footer__inner">
                 <div class="column">
                     <a href="/" class="logo">
-                        Mekashron
-                    </a>
+                        @if (currentLangCode == "he")
+                        {
+                        @:<text>מקשרון</text>
+                        }
+                        else
+                        {
+                        @:<text>Mekashron</text>
+                        }
+                        </a>
                     <p>
                         @Html.Raw(Model.Value("footerText"))
                     </p>
