--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -111,7 +111,7 @@
                     <ul class="navigation__list">
                         <li class="menu-item menu-item-has-children">
                             <a href="#">@Model.Value("products")</a>
-                            <ul class="sub-menu">
+                            <ul class="sub-menu" style="@(currentLangCode == "he" ? "top:100%;left: auto;right:0;" : "") ">
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
                                 </li>
