--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -99,7 +99,7 @@
                     <ul class="navigation__list">
                         <li class="menu-item menu-item-has-children">
                             <a>@Model.Value("products")</a>
-                            <ul class="sub-menu">
+                            <ul class="sub-menu" style="@(currentLangCode == "he" ? "top:100%;left: auto;right:0;" : "") ">
                                 <li class="menu-item">
                                     <a href="/blog/en/page/Business-CRM">@Model.Value("crmbusiness")</a>
                                 </li>
@@ -326,7 +326,7 @@
                             <div class="buttons">
                                 <a href="download/callcenterV7" class="button button--accent">@Model.Value("downloadButton")</a>
                                 @*<a href="/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
-                                <a href="/blog/en" class="link">@Model.Value("learnMore")</a>
+                                <a href="/blog/en/page/Call-Center-CRM" class="link">@Model.Value("learnMore")</a>
 
                             </div>
                         </div>
