--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -72,7 +72,7 @@
             text-align: left;
         }
         body:lang(he) {
-            font-family: "Noto Sans Hebrew", sans-serif;
+            font-family: "Arial Hebrew", sans-serif;
             letter-spacing: 0.8px;
         }
     </style>
